# PLASIM

./: CMakeLists.txt  README.md  index.html  params.json
doc/: .gitignore
doc/plasim/Plasim_Report/: report.tex
julia/: build_tarballs.jl  build_tarballs_NetCDFCXX.jl
plasim/: mkrun.sh
plasim/namelists/: icemod_namelist  oceanmod_namelist  plasim_namelist  rainmod_namelist
plasim/src/: CMakeLists.txt  cmake_build.sh  cmake_build_multi.sh  guimod.f90  guimod_stub.f90  icemod.f90  oceanmod.f90  options.mk  plasim.f90  plasim_dummy.f90  plasimmod.f90  pumax.c  pumax_stub.c  resmod.f90
postprocessor/: CMakeLists.txt  ExampleCompile  burn7.cpp  burn8.cpp
puma/src/: mpimod_multi.f90
scripts/: srv2nc
src/: CMakeLists.txt
src/plasim/: cmake_build.sh  cmake_build_multi.sh  fluxmod.f90  guimod_stub.f90  icemod.f90  landmod.f90  makefile  miscmod.f90  mpimod.f90  mpimod_stub.f90  oceanmod.f90  options.mk  outmod.f90  p_earth.f90  p_exo.f90  p_mars.f90  plasim.f90  plasim_dummy.f90  plasimmod.f90  radmod.f90  rainmod.f90  resmod_stub.f90  simba.f90  surfmod.f90
